terminaron distintas peticiones, y su documentacion
